tests/baselines/reference/jsdocTypesInTypeAnnotations.errors.txt
tests/cases/conformance/jsdoc/f.js(5,15): error TS2304: Cannot find name 'F'.
tests/cases/conformance/jsdoc/f.js(5,15): error TS8010: 'types' can only be used in a .ts file.
tests/cases/conformance/jsdoc/normal.ts(4,12): error TS7006: Parameter 'c' implicitly has an 'any' type.


==== tests/cases/conformance/jsdoc/node.d.ts (0 errors) ====
    declare function require(id: string): any;
    declare var module: any, exports: any;
    
==== tests/cases/conformance/jsdoc/f.js (2 errors) ====
    var F = function () {
        this.x = 1;
    };
    
    function f(p: F) { p.x; }
                  ~
!!! error TS2304: Cannot find name 'F'.
                  ~
!!! error TS8010: 'types' can only be used in a .ts file.
    
==== tests/cases/conformance/jsdoc/normal.ts (1 errors) ====
    class C { p: number }
    
    /** @param {C} p */
    function g(c) { return c.p }
               ~
!!! error TS7006: Parameter 'c' implicitly has an 'any' type.
    
    